# rust_101_workshop

./: README.md
basic_syntax/src/: main.rs
borrow_checker/src/: main.rs
example_derive/: Cargo.toml  lib.rs
generic_type_and_trait/: Cargo.toml
generic_type_and_trait/src/: main.rs
lifetime/src/: main.rs
option_and_result/: Cargo.toml  main.rs
option_and_result/src/: main.rs
practice_1_hello_world/: Cargo.toml
practice_2_sort_vec/: Cargo.toml
practice_2_sort_vec/src/: main.rs
practice_3_sort_opt_vec/: Cargo.toml
practice_3_sort_opt_vec/src/: main.rs
project_with_tests/: Cargo.toml  demo_abc.rs  lib.rs
simple_serde/: Cargo.toml
simple_serde/src/: main.rs
smart_ptr/: Cargo.toml
smart_ptr/src/: box_ffi.rs  once.rs  rc.rs  ref_cell.rs
